syntax = "proto3";
package lists;

import "assetmantle/base/properties/v1/anyProperty.v1.proto";
import "gogoproto/gogo.proto";

message PropertyList {
  option (gogoproto.goproto_getters) = false;

  repeated properties.AnyProperty property_list = 1;
}
