syntax = "proto3";
package orders.transactions.define;

import "assetmantle/base/ids/v1/identityID.v1.proto";
import "assetmantle/base/lists/v1/propertyList.v1.proto";

message Message {
  string from = 1;
  ids.IdentityID from_i_d = 2;
  lists.PropertyList immutable_meta_properties = 3;
  lists.PropertyList immutable_properties = 4;
  lists.PropertyList mutable_meta_properties = 5;
  lists.PropertyList mutable_properties = 6;
}
